--- a/TP.NET-master/ASP.Server/ASP.Server.csproj
+++ b/TP.NET-master/ASP.Server/ASP.Server.csproj
@@ -28,6 +28,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Book\Delete.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Book\Delete.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.2" />
